# FtMalloc

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_debug.sh  compile_tests.sh  run.sh  run_unix.sh  test1
core/: malloc.c
include/: malloc.h
libft/: Makefile
libft/include/: dependencies.h  libft.h
multithreading_test.dSYM/Contents/: Info.plist
src/: arena_update_max_chunks.c  arenap.h  bin_get_main.c  buff_show.c  calloc.c  create_new.c  debug.c  debug_private.h  debugp.h  free.c  freep.h  hexdump_chunk.c  malloc.c  malloc_chunk_tools.c  malloc_cut.c  malloc_private.h  malloc_tools.h  mallocp.h  realloc.c  show.c  show_step.c  showp.h  test_valid_chunk.c  utils.c
test/: main.c  multithreading.c
tests/: multithreading.c  test0.c  test1.c
